pulse-monitoring-s3-try