@@ -8,47 +8,53 @@ import java.util.List;
 import telran.monitoring.api.SensorData;
 import telran.monitoring.logging.Logger;
 
-public class LatestValuesSaverMap extends AbstractDataSaverLogger{
+public class LatestValuesSaverMap extends AbstractDataSaverLogger {
+    private final HashMap<Long, List<SensorData>> history = new HashMap<>();
+
     protected LatestValuesSaverMap(Logger logger) {
         super(logger);
-        
     }
 
-    private HashMap<Long, List<SensorData>> history = new HashMap<>();
     @Override
     public void addValue(SensorData sensorData) {
-       history.computeIfAbsent(sensorData.patientId(), (k) -> new LinkedList<SensorData>()).add(sensorData);
+        history.computeIfAbsent(sensorData.patientId(), k -> new LinkedList<>()).add(sensorData);
+        logger.log("info", "Added sensor data: " + sensorData);
     }
 
-    @SuppressWarnings("unchecked")
     @Override
     public List<SensorData> getAllValues(long patientId) {
-        return history.getOrDefault(patientId, Collections.EMPTY_LIST);
+        List<SensorData> values = history.getOrDefault(patientId, Collections.emptyList());
+        logger.log("info", "Retrieved all values for patient " + patientId + ": " + values);
+        return values;
     }
 
     @Override
     public SensorData getLastValue(long patientId) {
-        List<SensorData>patientHistory = history.getOrDefault(patientId, List.of());
+        List<SensorData> patientHistory = history.getOrDefault(patientId, List.of());
         SensorData res = null;
-        if(!patientHistory.isEmpty()) {
-            res = patientHistory.getLast();
+        if (!patientHistory.isEmpty()) {
+            res = patientHistory.get(patientHistory.size() - 1);
         }
+        logger.log("info", "Retrieved last value for patient " + patientId + ": " + res);
         return res;
     }
 
     @Override
     public void clearValues(long patientId) {
         List<SensorData> patientHistory = history.get(patientId);
-        if(patientHistory != null) {
+        if (patientHistory != null) {
             patientHistory.clear();
+            logger.log("info", "Cleared all values for patient " + patientId);
+        } else {
+            logger.log("warning", "No history found for patient " + patientId + " to clear");
         }
     }
 
     @Override
     public void clearAndAddValue(long patientId, SensorData sensorData) {
-       List<SensorData> patientHistory = history.computeIfAbsent(patientId, k -> new LinkedList<>());
-       patientHistory.clear();
-       patientHistory.add(sensorData);
+        List<SensorData> patientHistory = history.computeIfAbsent(patientId, k -> new LinkedList<>());
+        patientHistory.clear();
+        patientHistory.add(sensorData);
+        logger.log("info", "Cleared and added sensor data for patient " + patientId + ": " + sensorData);
     }
-
 }
